fixed selected-video title overflow styling

--- a/src/Comments/Comments.css
+++ b/src/Comments/Comments.css
@@ -3,10 +3,10 @@
 }
 
 .comments-header{
-    margin-top:5px;
+    margin-top: 5px;
+    margin-left: 1em;
     text-decoration: underline;
 }
-
 
 .comments-text {
     color: black;
